@@ -1,5 +1,6 @@
 2001-05-29  Jeff Freedman  <jeff@amy.nerble.net>
 
+	* gamewin.cc: DON'T close all gumps when casting a spell.
 	* effects.cc (Death_vortex): Death Vortex spell implemented.
 
 2001-05-28  Dancer Vesperman <dancer@users.sourceforge.net>
